// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLine> renders as expected with active class 1`] = `
<div
  className="transcription__line active"
>
  <p
    className="transcription__original"
  >
    another sample string
  </p>
  <p
    className="transcription__translation"
  >
    sample string
  </p>
</div>
`;

exports[`<TextLine> renders as expected without active class 1`] = `
<div
  className="transcription__line"
>
  <p
    className="transcription__original"
  >
    another sample string
  </p>
  <p
    className="transcription__translation"
  >
    sample string
  </p>
</div>
`;
